fix: loader overflowing its container

--- a/src/components/Editors/editors/Response/Response.module.scss
+++ b/src/components/Editors/editors/Response/Response.module.scss
@@ -10,13 +10,14 @@
 .loaderWrapper {
   position: absolute;
   display: block;
-  width: 100%;
-  height: 100%;
-  background-color: white;
+  width: calc(100% - 32px);
+  height: calc(100% - 32px);
   z-index: 3;
+  background-color: #f5f5f5;
+  border-radius: 10px;
   .loader {
     margin: auto;
-    top: calc(50% - 60px);
+    top: calc(50% - 60px / 2);
   }
 }
 .responseCode {
